--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <label for="ip-input"></label>
   <input type="text" id="ip-input" name="ip-input" class="ip-input"
   placeholder="Search for any IP address or domain">
-  <button class="button"> ></button>
+  <button class="button"><img src="./images/icon-arrow.svg" alt=""></button>
 </div>
 
 <section class="first-section">
